added profiler dependency